After aborting copying big file, there is a part of the file left
Steps to reproduce
- Copy big file (a movie file for example)
- Paste somewhere else (even in the same directory)
- During copying process, abort it
- There is a partial file left after the process
Current behavior
Partial file is left after cancelling copying process
Expected behavior
Unfinished files should be deleted to ensure user that all currently copied files are 100% correct
Additional information
I think that copying process should work like "all or nothing" - I mean here all bytes of the file or none bytes. Exemplary situation: I want to copy a lot of big movie files from my camera's SD card to my PC's hard disk but during the process I needed to cancel it because of something. So, when I want to finish the process later, I need to delete (or replace) all currently copied files, because one of them is corrupted/uncompleted and I may don't know which one, so in fact I need to start the process from the very beginning.