file-operations: Don't leave partially copied file on cancelled copy

If a file copy operation is cancelled, we leave a partially copied
file on the destination.  This is bad because it can lead to data
loss is the user believes they have successfully copied their file.
Let's delete the destination file, if the operation was cancelled
on a copy.

Fixes: https://gitlab.gnome.org/GNOME/nautilus/-/issues/1063